@@ -20,6 +20,7 @@ import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.io.PrintWriter;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -88,7 +89,7 @@ class MavenBuild {
 
 	private Map<String, String> getPomReplacements() {
 		Map<String, String> replacements = new HashMap<>();
-		replacements.put("java.version", "17");
+		replacements.put("java.version", "1.8");
 		replacements.put("project.groupId", "org.springframework.boot");
 		replacements.put("project.artifactId", "spring-boot-maven-plugin");
 		replacements.putAll(new Versions().asMap());
@@ -130,7 +131,7 @@ class MavenBuild {
 		try {
 			Path destination = this.temp.toPath();
 			Path source = this.projectDir.toPath();
-			Files.walkFileTree(source, new SimpleFileVisitor<>() {
+			Files.walkFileTree(source, new SimpleFileVisitor<Path>() {
 
 				@Override
 				public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) throws IOException {
@@ -141,12 +142,12 @@ class MavenBuild {
 				@Override
 				public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
 					if (file.toFile().getName().equals("pom.xml")) {
-						String pomXml = Files.readString(file);
+						String pomXml = new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
 						for (Entry<String, String> replacement : MavenBuild.this.pomReplacements.entrySet()) {
 							pomXml = pomXml.replace("@" + replacement.getKey() + "@", replacement.getValue());
 						}
-						Files.writeString(destination.resolve(source.relativize(file)), pomXml,
-								StandardOpenOption.CREATE_NEW);
+						Files.write(destination.resolve(source.relativize(file)),
+								pomXml.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE_NEW);
 					}
 					else {
 						Files.copy(file, destination.resolve(source.relativize(file)),
@@ -156,10 +157,12 @@ class MavenBuild {
 				}
 
 			});
-			String settingsXml = Files.readString(Paths.get("src", "intTest", "projects", "settings.xml"))
+			String settingsXml = new String(Files.readAllBytes(Paths.get("src", "intTest", "projects", "settings.xml")),
+					StandardCharsets.UTF_8)
 				.replace("@localCentralUrl@", new File("build/int-test-maven-repository").toURI().toURL().toString())
 				.replace("@localRepositoryPath@", new File("build/local-maven-repository").getAbsolutePath());
-			Files.writeString(destination.resolve("settings.xml"), settingsXml, StandardOpenOption.CREATE_NEW);
+			Files.write(destination.resolve("settings.xml"), settingsXml.getBytes(StandardCharsets.UTF_8),
+					StandardOpenOption.CREATE_NEW);
 			request.setBaseDirectory(this.temp);
 			request.setJavaHome(new File(System.getProperty("java.home")));
 			request.setProperties(this.properties);
